Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74648

QGradient crashes using a non existing QGradient::Preset number

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.12.4, 5.14.0 Alpha
    • 5.12.2
    • GUI: Painting
    • None
    • Windows
    • 3b7db8ac90ba36949cb4168f07cc8dace47758a7 (qt/qtbase/5.12)

    Description

      From the new feature in Qt5.12.2

       It crashes if we place direct a number that does not exist in QGradient::Preset enumarator.

                fillRect(0, 0, cx, cy, (QGradient::Preset) 0 );         (crashes here)

      and between the published 1-180 in  https://webgradients.com/ 

      missing numbers: 27,39,40,45,71,74,105,111,119,130,135,141

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vgt Eirik Aavitsland
            artemis Art Xin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes